fixed public view count on mobile

--- a/_static/css/global.css
+++ b/_static/css/global.css
@@ -794,6 +794,10 @@ iframe {
         padding: 3px 5px !important;
     }
 
+    .public_views {
+        top: 46px !important;
+    }
+
     .author {
         font-size: 24px !important;
         margin-top: -56px !important;
